# FSW

./: .clang-format  .clang-tidy  .clangd  .codingstandards.md  .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  csv  docker-compose.yml  new_types.diff  pull_request_template.md  test.h  west.yml
app/backplane/deployment_module/: CMakeLists.txt  Kconfig  Makefile  core.conf  debug.conf  sample.yaml  sim.conf
app/backplane/deployment_module/boards/: deployment_module.overlay  native_sim.conf  native_sim.overlay
app/backplane/deployment_module/include/: c_deployment_control_tenant.h  c_deployment_module.h  c_pyro_control_observer.h
app/backplane/deployment_module/src/: c_deployment_control_tenant.cpp  c_deployment_module.cpp  c_pyro_control_observer.cpp  main.cpp
app/backplane/power_module/: CMakeLists.txt  Kconfig  Makefile  core.conf  debug.conf  prj.conf  sample.yaml  sim.conf
app/backplane/power_module/.run/: JLink.run.xml
app/backplane/power_module/ac/: types.yaml
app/backplane/power_module/boards/: blt_plane.overlay  native_sim.overlay  power_module.overlay
app/backplane/power_module/include/: DELETEME  c_adc_tenant.h  c_power_module.h  c_sensing_tenant.h  n_types.h  udp_transmit.h
app/backplane/power_module/src/: c_adc_tenant.cpp  c_power_module.cpp  c_sensing_tenant.cpp  main.cpp  udp_transmit.cpp
app/backplane/sensor_module/: .gitignore  CMakeLists.txt  Kconfig  Makefile  core.conf  csv  debug.conf  prj.conf  prj.conf.old  sample.yaml  sim.conf
app/backplane/sensor_module/ac/: types.yaml
app/backplane/sensor_module/boards/: native_sim.conf  native_sim.overlay  sensor_hw_sim.conf  sensor_hw_sim.overlay  sensor_module.overlay
app/backplane/sensor_module/conf/: core.conf  debug.conf
app/backplane/sensor_module/include/: c_broadcast_tenant.h  c_detection_handler.h  c_dumb_flash_tenant.h  c_ork_toggle_tenant.h  c_remote_activation.h  c_rs485_tenant.h  common.h  (+4 more)
app/ground/receiver_module/: 433mhz.conf  CMakeLists.txt  Kconfig  Makefile  core.conf  debug.conf  sample.yaml  sim.conf
app/ground/tcp_flash_dump/: CMakeLists.txt  client.py  prj.conf  sensor_mod_data_finder.py
app/other/airbraker/: .samplelifht.txt.kate-swp  CMakeLists.txt  Kconfig  debug.conf  flightlog.txt  prj.conf  ramreport  ramreport_nosensorshell  sample.yaml
app/other/app_potato/: CMakeLists.txt  debug.conf
app/samples/benchmark_littlefs_datalogger/: CMakeLists.txt  native_sim.overlay  prj.conf  sample.yaml  teensy40.overlay
app/samples/madgwick/: CMakeLists.txt  prj.conf  sample.yaml
app/samples/openrocket_sensors/: CMakeLists.txt  Makefile  native_sim.overlay  prj.conf  sample.yaml
app/tests/utils/: CMakeLists.txt  main.cpp  prj.conf  testcase.yaml
app_grim_reefer/: CMakeLists.txt  Kconfig  debug.conf  native_sim.conf  native_sim.overlay  prj.conf  sample.yaml
app_grim_reefer/boards/: CMakeCache.txt  native_sim.conf  native_sim.overlay  nucleo_f446re.overlay  zephyr_settings.txt
app_grim_reefer/extra/: Openrocket Test Data.ods  README.md  analysis.ipynb  analysis.py  grimReefer.ioc  make_test_data.py  out.c
app_grim_reefer/extra/Test Data/: 0 MPH 15% Turbulence.csv  0 MPH 20% Turbulence.csv  0 MPH 5 Degree Launch Angle.csv  0 MPH 5% Turbulence .csv  0 MPH 7 Degree Launch Angle.csv  0 MPH Chunky Mass.csv  0 MPH Min Mass.csv  10 MPH 15% Turbulence.csv  10 MPH 20% Turbulence.csv  10 MPH 5 Degree Launch Angle.csv  10 MPH 5% Turbulence.csv  10 MPH 7 Degree Launch Angle.csv  10 MPH Chunky Mass.csv  10 MPH Min Mass.csv  15 MPH 15% Turbulence.csv  15 MPH 20% Turbulence.csv  15 MPH 5 Degree Launch Angle.csv  15 MPH 5% Turbulence.csv  15 MPH 7 Degree Launch Angle.csv  15 MPH Chunky Mass.csv  15 MPH Min Mass.csv  20 MPH 15% Turbulence.csv  20 MPH 20% Turbulence.csv  20 MPH 5 Degree Launch Angle.csv  20 MPH 5% Turbulence.csv  20 MPH 7 Degree Launch Angle.csv  20 MPH Chunky Mass.csv  20 MPH Min Mass.csv  25 MPH 15% Turbulence.csv  25 MPH 20% Turbulence.csv  25 MPH 5 Degree Launch Angle.csv  25 MPH 5% Turbulence .csv  25 MPH 7 Degree Launch Angle.csv  25 MPH Chunky Mass.csv  25 MPH Min Mass.csv  30 MPH 15% Turbulence.csv  30 MPH 20% Turbulence.csv  30 MPH 5 Degree Launch Angle.csv  30 MPH 5% Turbulence.csv  30 MPH 7 Degree Launch Angle.csv  (+20 more)
app_grim_reefer/src/: .Openrocket Test Data.csv.kate-swp  Openrocket Test Data.csv  Openrocket Test Data.ods  boost_detect.c  boost_detect.h  buzzer.c  buzzer.h  cmds.c  config.h  data_reading.c  data_reading.h  data_storage.c  data_storage.h  fake_data.h  flight.h  main.c  orchestrator.c  orchestrator.h  sensors.c  sensors.h  telem.c  telem.h  testing.c  testing.h
app_power_module/: CMakeLists.txt  Kconfig  debug.conf  prj.conf
app_power_module/boards/: CMakeCache.txt
app_power_module/src/: logging.c  main.c  net_utils.c  networking.c  power_module.h  power_module_defs.h  telem.c  telem.h  telemetry.c
app_sensor_module/: CMakeLists.txt  Kconfig  debug.conf  prj.conf  sample.yaml
app_sensor_module/.run/: JLink.run.xml
app_sensor_module/src/: boost_detect.c  logging.c  main.c  modbus_client.c  net_utils.c  net_utils.h  networking.c  networking.h  sensing.c  sensing.h  sensor_module.h  sensors.c  sensors.h
lib/f_core/: CMakeLists.txt  Kconfig  README.md
lib/f_core/device/: CMakeLists.txt  c_adc.cpp  c_gpio.cpp  c_rtc.cpp  openrocket_launch.c
lib/f_core/flight/: CPhaseController.cpp  c_phase_controller.cpp  flight_log.cpp
lib/f_core/horus/: Kconfig  horus.c
lib/f_core/math/: CMakeLists.txt  c_madgwick.cpp  n_math_utils.cpp
lib/f_core/net/: CMakeLists.txt  Kconfig
lib/f_core/os/: CMakeLists.txt  Kconfig  c_datalogger.cpp  c_file.cpp  c_fs_datalogger.cpp  c_latest_mailbox.cpp  c_raw_datalogger.cpp  c_task.cpp  c_tenant.cpp  c_zms_manager.cpp  flight_log.cpp  n_rtos.cpp
lib/f_core/protocols/: CMakeLists.txt
lib/f_core/radio/: CMakeLists.txt  Kconfig  c_lora.cpp  c_lora_link.cpp  c_lora_router.cpp  c_lora_tenant.cpp
lib/f_core/state_machine/: CMakeLists.txt  c_pad_flight_landing_state_machine.cpp
lib/f_core/utils/: n_bootcount.cpp  n_gnss_utils.cpp  n_time_utils.cpp
(+1668 files in other folders)
